--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
 			<version>3.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.1-jre</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
